src/tests/fixtures/field_definitions/FieldAsStaticClassMethodInNestedScope.invalid.ts.expected
-----------------
INPUT
----------------- 
function main() {
  /** @gqlType */
  class User {
    /** @gqlField */
    name: string;

    /** @gqlField */
    static getUser(_: Query): User {
      return new User();
    }
  }
}

/** @gqlType */
type Query = unknown;

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/FieldAsStaticClassMethodInNestedScope.invalid.ts:3:3 - error: Expected `@gqlField` static method's class to be exported. Grats needs to import resolvers into it's generated schema module, so the resolver class must be an exported.

  3   class User {
      ~~~~~~~~~~~~
  4     /** @gqlField */
    ~~~~~~~~~~~~~~~~~~~~
... 
 10     }
    ~~~~~
 11   }
    ~~~
